--- a/README
+++ b/README
@@ -3,6 +3,8 @@ Copyright (c) 2009 Unnikrishnan KP, released under the MIT license
 Instant Calendar 
 ===============
 
+Test sample change
+
 Displays a simple HTML calendar. Appearance and behaviour of the calendar is fully customizable.
 
 Usage
